--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/view.html
@@ -14,7 +14,7 @@
 	</div>
 	
 	<div class="condition-area">
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_CLAIM_NO}"></th><!--Claim No  -->
