--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/order_form.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/order_form.html
@@ -60,7 +60,7 @@
 	<input type="hidden" id="tmpShippingCondition" name="tmpShippingCondition"/><!-- Shipping Condition 변경 시 이전 값을 저장해 두기 위한 용도 -->
 	<input type="hidden" id="tmpShippingConditionName" name="tmpShippingConditionName"/><!-- Shipping Condition 변경 시 이전 값을 저장해 두기 위한 용도 -->
 	
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th colspan="4">
