--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/ship_to_party_list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/ship_to_party_list.html
@@ -14,7 +14,7 @@
 	
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_DEALER_CODE}"></th>
