--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/delivery/list.html
@@ -16,23 +16,21 @@
 	<form id="FORM_search" name="FORM_search">
 	<input type="hidden" id="pShipmentNo2" name="pShipmentNo2" value=""/><!-- for detail page -->
 	
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_SHIPMENT_DOC_CREATE_DATE}"></th><!-- Shipment Doc. Create Date Period-->
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
-						<div class="split"></div>
-						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar" th:value="${pToDate}">					
+						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">					
 					</div>
 				</td>
 				<th th:text="#{HQPD_L_ONBOARD_DATE}"></th><!-- Onboard Date Period -->
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromOnboardDate" name="pFromOnboardDate" class="custom-ui-calendar" th:value="${pOnboardFromDate}">
-						<div class="split"></div>
-						<input type="text" id="pToOnboardDate" name="pToOnboardDate" class="custom-ui-calendar" th:value="${pToOnboardDate}">					
+						<input type="text" id="pToOnboardDate" name="pToOnboardDate" class="custom-ui-calendar to" th:value="${pToOnboardDate}">					
 					</div>
 				</td>
 			</tr>			
@@ -51,7 +49,7 @@
 				</td>			
 			</tr>
 			<tr>
-				<th th:text="#{HQPD_L_PARTS_NO}"></th>
+				<th th:text="#{HQPD_L_PART_NO}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pPartNo" name="pPartNo" class="custom-ui" th:value="${pPartNo}">
@@ -104,7 +102,7 @@
 				{data: "BEZEI20", title: "[[#{HQPD_L_DESTINATION}]]"},
 				{data: "BEZEI", title: "[[#{HQPD_L_SHIPPING_TYPE}]]"},
 				{data: "NAME2", title: "[[#{HQPD_L_FORWARDER}]]"},
-				{data: "ZFCIVNO", title: "[[#{HQPD_L_INVOICE_NO}]]"}
+				{data: "ZFCIVNO", title: "[[#{HQPD_L_COMMERCIAL_INVOICE_NO}]]"}
 			],
 			ajax: {
 				url: "/portal/iv/hq/parts/domestic/order/delivery/list/data",
@@ -123,7 +121,7 @@
 				{				
 					let data = response.RESULT;
 					
-					$("#totalRows").html(data.length+" row(s).");
+					$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
 					
 					return data;
 				}			
