--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/accounts/ap/view.html
@@ -6,7 +6,7 @@
 	
 <th:block layout:fragment="content">
 	<div class="block-header">
-		<div class="block-title" th:text="#{HQPD_T_AP_LIST_DETAIL}"></div>
+		<div class="block-title" th:text="#{HQPD_L_AP_DETAIL}"></div>
 		<div class="block-button-area">
 			<button id="BTN_download" type="button" th:text="#{HQPD_B_DOWNLOAD}"></button>
 			<button id="BTN_search" type="button" th:text="#{HQPD_B_SEARCH}"></button>
@@ -15,7 +15,7 @@
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
 	
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_SHIPMENT_NO}"></th>
@@ -35,17 +35,15 @@
 				<th th:text="#{HQPD_L_COMMERCIAL_INVOICE_NO}"></th>
 				<td>
 					<div class="input-area">
-						<input type="text" id="pFromInvoiceNo" name="pFromInvoiceNo" class="custom-ui" th:value="${pFromInvoiceNo}">
-						<div class="split"></div>
-						<input type="text" id="pToInvoiceNo" name="pToInvoiceNo" class="custom-ui" th:value="${pToInvoiceNo}">
+						<input type="text" id="pFromInvoiceNo" name="pFromInvoiceNo" class="custom-ui-scope" th:value="${pFromInvoiceNo}">
+						<input type="text" id="pToInvoiceNo" name="pToInvoiceNo" class="custom-ui-scope" th:value="${pToInvoiceNo}">
 					</div>
 				</td>
 				<th th:text="#{HQPD_L_BILLING_DATE}"></th>
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
-						<div class="split"></div>
-						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar" th:value="${pToDate}">					
+						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">					
 					</div>
 				</td>
 			</tr>			
@@ -88,15 +86,15 @@
 				{data: "MAKTX", title: "[[#{HQPD_L_PART_DESC}]]"},
 				{data: "AUART_T", title: "[[#{HQPD_L_ORDER_TYPE}]]"},
 				{data: "VBELN_VA", title: "[[#{HQPD_L_ORDER_NO}]]"},
-				{data: "POSNR_VA", title: "[[#{HQPD_L_BILLING_LINE_ITEM}]]"},				
-				{data: "FKIMG", title: "[[#{HQPD_L_BILLING_QTY}]]", className: "right"},
+				{data: "POSNR_VA", title: "[[#{HQPD_L_ORDER_ITEM_ROWS}]]"},				
+				{data: "FKIMG", title: "[[#{HQPD_L_ORDER_QTY}]]", className: "right"},
 				{data: "VRKME", title: "[[#{HQPD_L_UOM}]]"},
-				{data: "NETPR", title: "[[#{HQPD_L_UNIT_PRICE}]]", className: "right"},
+				{data: "NETPR", title: "[[#{HQPD_L_AP_UNIT_PRICE}]]", className: "right"},
 				{data: "NETWR", title: "[[#{HQPD_L_AP_AMT}]]", className: "right"},
 				{data: "WAERK", title: "[[#{HQPD_L_CURR}]]"},
 				{data: "HERKL", title: "[[#{HQPD_L_ORIGIN}]]"},
-				{data: "VBELN_VL", title: "[[#{HQPD_L_DELIVERY_NO}]]"},
-				{data: "POSNR_VL", title: "[[#{HQPD_L_DELVY_LINE_ITEM}]]"},
+				{data: "VBELN_VL", title: "[[#{HQPD_L_AP_DELIVERY_NO}]]"},
+				{data: "POSNR_VL", title: "[[#{HQPD_L_DIV_SEQ}]]"},
 				{data: "MWSBP", title: "[[#{HQPD_L_TAX_AMT}]]", className: "right"},
 				{data: "VENUM", title: "[[#{HQPD_L_INTERAL_HU_NO}]]"}
 			],
@@ -115,7 +113,7 @@
 				{				
 					let data = response.RESULT;
 					
-					$("#totalRows").html(data.length+" row(s).");
+					$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
 					
 					return data;
 				}			
