--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/claim/list.html
@@ -16,7 +16,7 @@
 	<input type="hidden" id="orderNo" name="orderNo">
 	<input type="hidden" id="docDate" name="docDate">
 	<input type="hidden" id="docType" name="docType">	
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_COMPLAINT_NO}"></th><!-- Complaint No. -->
@@ -43,8 +43,7 @@
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
-						<div class="split"></div>
-						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar" th:value="${pToDate}">
+						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">
 					</div>		
 				</td>			
 			</tr>				
@@ -81,8 +80,8 @@
 			columns : [
 				{data: "VBELN", 		title: "[[#{HQPD_L_CLAIM_NO}]]", className:"link"},//Claim No.
 				{data: "POSNR", 		title: "[[#{HQPD_L_LINE_ITEM}]]"},// Line Item.
-				{data: "TEXT", 			title: "[[#{HQPD_L_REASON}]]"},// Reason
-				{data: "ERDAT", 		title: "[[#{HQPD_L_DOC_DATE}]]"},// Doc. Date
+				{data: "TEXT", 			title: "[[#{HQPD_L_CLAIM_REASON}]]"},// Reason
+				{data: "ERDAT", 		title: "[[#{HQPD_L_CLAIM_DOC_CREATE_DATE}]]"},// Doc. Date
 				{data: "VBELN2", 		title: "[[#{HQPD_L_SALES_DOC_NO}]]", className: "link"},// Sales Doc. No.
 				{data: "T_NETWR", 		title: "[[#{HQPD_L_TOTAL_AMOUNT}]]", className: "right"},// Total Amount
 				{data: "WAERK", 		title: "[[#{HQPD_L_CURR}]]"},// Curr.
@@ -120,7 +119,7 @@
 						}
 					}
 
-					$("#totalRows").html(claimList.length + " row(s).");
+					$("#totalRows").html(JpUtilsNumber.addComma(claimList.length) + " row(s).");
 
 					return claimList;
 				}			
