--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/info/popup/part_search.html
@@ -13,7 +13,7 @@
 	</div>	
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_PART_NO}"></th><!-- Part No.  -->
@@ -107,7 +107,7 @@
 						data[i].RAD_MATNR = "";					
 					}
 					
-					$("#totalRows").html(data.length + " row(s).");
+					$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
 					
 					return data;
 				}
