--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
@@ -16,7 +16,7 @@
 	</div>
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_ORDER_NO}"></th>
@@ -41,8 +41,7 @@
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
-						<div class="split"></div>
-						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar" th:value="${pToDate}">					
+						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">					
 					</div>
 				</td>
 			</tr>		
@@ -142,7 +141,7 @@
 						data[i].PRETD = etdDesc;
 					};		
 					
-					$("#totalRows").html(data.length+" row(s).");
+					$("#totalRows").html(JpUtilsNumber.addComma(data.length) + " row(s).");
 					
 					return data;
 				}			
