--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/transfer_to_order.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/transfer_to_order.html
@@ -15,7 +15,7 @@
 	</div>
 	
 	<div class="condition-area">
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{	HQPD_L_ORDER_TYPE}"></th>
