--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/inquiry/list.html
@@ -17,7 +17,7 @@
 	<form id="FORM_search" name="FORM_search">
 	<input type="hidden" id="orderNo" name="orderNo"/>
 	<input type="hidden" id="status" name="status"/>
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th colspan="4">
@@ -48,8 +48,7 @@
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
-						<div class="split"></div>
-						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar" th:value="${pToDate}">
+						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">
 					</div>
 				</td>				
 			</tr>
@@ -118,9 +117,9 @@ $(function(){
 		columns : [
 			{data: "VBELN", title: "[[#{HQPD_L_INQUIRY_NO}]]", className: "link"},//Inuqiry No.
 			{data: "BSTKD", title: "[[#{HQPD_L_PO_NO}]]"},//P.O. No.
-			{data: "VBELN2", title: "[[#{HQPD_L_SALES_DOC_NO}]]", className: "link"},//Sales Doc. No.
-			{data: "ERDAT2", title: "[[#{HQPD_L_ORDER_DATE}]]"},//Create Date
-			{data: "COUNT", title: "[[#{HQPD_L_ITEM_ROWS}]]", className: "right"},//Line Item
+			{data: "VBELN2", title: "[[#{HQPD_L_INQUIRY_TO_ORDER_NO}]]", className: "link"},//Sales Doc. No.
+			{data: "ERDAT2", title: "[[#{HQPD_L_INQUIRY_DATE}]]"},//Create Date
+			{data: "COUNT", title: "[[#{HQPD_L_ORDER_ITEM_ROWS}]]", className: "right"},//Line Item
 			{data: "T_NETWR", title: "[[#{HQPD_L_ORDER_AMOUNT}]]", className: "right"},//Order Amt.
 			{data: "WAERK", title: "[[#{HQPD_L_CURR}]]"},//Curr.
 			{data: "RFGSK_TX", title: "[[#{	HQPD_L_STATUS}]]"}//Open Status
@@ -162,7 +161,7 @@ $(function(){
 					};
 				};
 				
-				$("#totalRows").html(result.length+" row(s).");
+				$("#totalRows").html(JpUtilsNumber.addComma(result.length) + " row(s).");
 
 				return result;
 			}
