--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/list.html
@@ -17,7 +17,7 @@
 	<div class="condition-area">
 	<form id="FORM_search" name="FORM_search">
 	<input type="hidden" id="orderNo" name="orderNo"/>
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th colspan="4">
@@ -56,8 +56,7 @@
 				<td>
 					<div class="input-area">
 						<input type="text" id="pFromDate" name="pFromDate" class="custom-ui-calendar" th:value="${pFromDate}">
-						<div class="split"></div>
-						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar" th:value="${pToDate}">
+						<input type="text" id="pToDate" name="pToDate" class="custom-ui-calendar to" th:value="${pToDate}">
 					</div>
 				</td>
 				<th th:text="#{HQPD_L_PO_NO}"></th>
@@ -105,8 +104,8 @@ $(function(){
 			{data: "ZZAUKON", title: "[[#{HQPD_L_ORDER_TYPE}]]"},//Order Type
 			{data: "VTEXT2", title: "[[#{HQPD_L_SHIPPING_CONDITION}]]"},//Shipping Condition
 			{data: "BSTKD", title: "[[#{HQPD_L_PO_NO}]]"},//P.O. No.
-			{data: "ERDAT2", title: "[[#{HQPD_L_ORDER_DATE}]]"},//Create Date // 데이터 오른쪽 정렬.
-			{data: "COUNT", title: "[[#{HQPD_L_ITEM_ROWS}]]", className: "right"},//Item Rows
+			{data: "ERDAT2", title: "[[#{HQPD_L_ORDER_DATE}]]"},//Create Date
+			{data: "COUNT", title: "[[#{HQPD_L_ORDER_ITEM_ROWS}]]", className: "right"},//Item Rows
 			{data: "T_NETWR", title: "[[#{HQPD_L_ORDER_AMOUNT}]]", className: "right"},//Order Amt.
 			{data: "WAERK", title: "[[#{HQPD_L_CURR}]]"}//Curr.
 		],
@@ -136,7 +135,7 @@ $(function(){
 					result[i].ERDAT2 = result[i].ERDAT + " " + result[i].ERZET;
 				};
 				
-				$("#totalRows").html(result.length+" row(s).");
+				$("#totalRows").html(JpUtilsNumber.addComma(result.length) + " row(s).");
 
 				return result;
 			}
