--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/display/order/view_inc.html
@@ -18,7 +18,7 @@
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_ORDER_TYPE}"></th>
-				<td id="KONDA_TEXT"></td>
+				<td id="KONDA_TEXT" style="width:250px;"></td>
 				<th th:text="#{HQPD_L_SHIP_TO_PARTY}">
 				<td id="KUNAG_NAME"></td>
 			</tr>
@@ -26,17 +26,36 @@
 				<th th:text="#{HQPD_L_PO_NO}"></th>
 				<td id="BSTNK"></td>
 				<th th:text="#{HQPD_L_SHIPPING_INFO}"></th>
-				<td id="VSBED_TX"></td>
+				<td>
+					<table class="table-inner table-fixed">
+						<thead>
+							<tr>
+								<th th:text="#{HQPD_L_SHIPPING_CONDITION}">Shipping Condition</th>
+								<th th:text="#{HQPD_L_ROUTE}">Route</th>
+								<th th:text="#{HQPD_L_PAYMENT_TERMS}">Payment terms</th>
+								<th th:text="#{HQPD_L_INCOTERMS1}">Incoterms1</th>
+								<th th:text="#{HQPD_L_INCOTERMS2}">Incoterms2</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td id="VSBED_TX"></td>
+								<td id="ROUTE_TX"></td>								
+								<td id="ZTERM_TX"></td>
+								<td id="INCO1"></td>
+								<td id="INCO2"></td>
+							</tr>
+						</tbody>
+					</table>
+				</td>
 			</tr>
 			<tr>
 				<th th:text="#{HQPD_L_RDD}"></th>
-				<td id="VDATU"></td>
-				<th th:text="#{HQPD_L_COMPLETE_DELIVERY}"></th>
-				<td id="COMPLETE_DELIVERY"></td>
+				<td id="VDATU" colspan="3"></td>
 			</tr>
 			<tr>
 				<th th:text="#{HQPD_L_REMARKS}"></th>				
-				<td colspan="3" id="remark"></td>
+				<td colspan="3" id="REMARK"></td>
 			</tr>
 		</tbody>
 	</table>
@@ -77,6 +96,12 @@
 	
 <script>
 
+//팝업으로 열릴경우 Back 버튼 제거
+if (opener)
+{
+	$("#BTN_back").hide();
+};
+
 //화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
 //컬럼 width 자동. scroller 자동.
 //고정된 맵 데이터 사용. 페이지 생성시 데이터 넘겨서 그리드 만드는 방식
@@ -89,6 +114,7 @@ $(function(){
 	    {
 	    	let result = response.RESULT;
 
+	    	let generalZterm = result.generalZterm;
 	    	let mainHeadResult = result.mainHeadResult;
 	    	let general = result.general;	    	
 	    	let item = result.item;
@@ -96,14 +122,23 @@ $(function(){
 	    	$.each(item, function(key, value) {
 	    		this.VBELN = "[[${orderNo}]]";
 	    	});
+
+	    	let ztermTx = "";
+	    	if (generalZterm != null && generalZterm.length > 0)
+	    	{
+	    		ztermTx = generalZterm[0].TEXT;
+	    	};
 	    	
 	    	$("#KONDA_TEXT").html(mainHeadResult.KONDA_TEXT);
 	    	$("#KUNAG_NAME").html(mainHeadResult.KUNAG_NAME + " " + mainHeadResult.KUNAG_STREET);
 	    	$("#BSTNK").html(general.BSTNK);
 	    	$("#VSBED_TX").html(general.VSBED_TX);
+	    	$("#ROUTE_TX").html(general.ROUTE_TX);
+	    	$("#ZTERM_TX").html(ztermTx);
+	    	$("#INCO1").html(general.INCO1);
+	    	$("#INCO2").html(general.INCO2);
 	    	$("#VDATU").html(general.VDATU);
-	    	$("#COMPLETE_DELIVERY").html( (general.COMPLETE_DELIVERY == "X") ? "Y" : "N" );
-	    	$("#remark").html(result.remark);
+	    	$("#REMARK").html(result.remark);
 	    	$("#NETWR").html(mainHeadResult.NETWR + " " + mainHeadResult.WAERK);
 	    	$("#CREDIT").html(mainHeadResult.CREDIT + " " + mainHeadResult.CREDIT_WAERK);
 	    	$("#TOTAL_WEIGHT").html(mainHeadResult.TOTAL_WEIGHT + " " + mainHeadResult.GEWEI);
@@ -123,8 +158,8 @@ $(function(){
 	    			{data: "REQ_QTY", title: "[[#{HQPD_L_REQ_QTY}]]", className: "right"},//Req Qty
 	    			{data: "LOT_QTY", title: "[[#{HQPD_L_SALES_LOT}]]", className: "right"},//Sales Lot
 	    			{data: "UOM", title: "[[#{HQPD_L_UOM}]]"},//UoM
-	    			{data: "NET_PRICE", title: "[[#{HQPD_L_NET_PRICE}]]", className: "right"},//Net Price
-	    			{data: "NET_VALUE", title: "[[#{HQPD_L_NET_VALUE}]]", className: "right"},//Net Value
+	    			{data: "NET_PRICE", title: "[[#{HQPD_L_NET_PRICE}]]", className: "right"},//Net price
+	    			{data: "NET_VALUE", title: "[[#{HQPD_L_NET_VALUE}]]", className: "right"},//Net value	    			
 	    			{data: "AVAILABILITY", title: "[[#{HQPD_L_AVAILABILITY}]]"}//Available
 	    		],
 	    		columnDefs: [
