--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/status/view.html
@@ -13,7 +13,7 @@
 	</div>
 	<input type="hidden" id="orderNo" name="orderNo" th:value="${orderNo}">	
 	<div class="condition-area">
-	<table class="condition">
+	<table class="condition table-fixed">
 		<tbody>
 			<tr>
 				<th th:text="#{HQPD_L_ORDER_NO}"></th><!-- Order No. -->
