--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/bottom.html
@@ -8,7 +8,7 @@
 			<div class="copyright" th:text="#{PLTF_T_COPYLEFT}"></div>
 		</div>
 		<div>
-			<button>Language</button>
+			<button th:text="#{HQPD_B_LANGUAGE}"></button>
 		</div>
 		<div class="split-row-compact"></div>
 	</div>
